altera para mostrar

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Presentation Ninja</title>
+    <title>bia é muito legal</title>
     <meta charset="utf-8" />
     <meta name="author" content="Yihui Xie" />
     <link href="libs/remark-css-0.0.1/kunoichi.css" rel="stylesheet" />
@@ -12,7 +12,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Presentation Ninja
+# bia é muito legal
 ## ⚔<br/>with xaringan
 ### Yihui Xie
 ### RStudio, PBC
